# api/index.ts
@@ -2,38 +2,109 @@ import {
   OpenapiDocument,
   OpenapiOperationObject,
   OpenapiPathItemObject,
+  ReferenceObject,
+  resolveReferenceBrowser,
 } from "openapi-util";
-import { create } from "../src/api/[databaseSlug]/create.js";
-import { read } from "../src/api/[databaseSlug]/read.js";
-import { update } from "../src/api/[databaseSlug]/update.js";
-import { remove } from "../src/api/[databaseSlug]/remove.js";
-import { renderCrudOpenapi } from "../src/api/[databaseSlug]/renderCrudOpenapi.js";
+import { create } from "../src/api/create.js";
+import { read } from "../src/api/read.js";
+import { update } from "../src/api/update.js";
+import { remove } from "../src/api/remove.js";
+import { getCrudOpenapi } from "../src/api/getCrudOpenapi.js";
 import { createDatabase } from "../src/api/createDatabase.js";
-import { getSchema } from "../src/api/[databaseSlug]/getSchema.js";
+import { getSchema } from "../src/api/getSchema.js";
 import { listDatabases } from "../src/api/listDatabases.js";
 import { getOpenapi } from "../src/api/getOpenapi.js";
 import openapi from "../src/openapi.json" assert { type: "json" };
 
-import { Json, mergeObjectsArray, notEmpty } from "from-anywhere";
-import {
-  tryGetOperationBodySchema,
-  tryValidateSchema,
-  makeOpenapiPathRouter,
-} from "openapi-util";
+import { Json, mergeObjectsArray, notEmpty, onlyUnique2 } from "from-anywhere";
+import { tryValidateSchema, makeOpenapiPathRouter } from "openapi-util";
 import { JSONSchemaType } from "ajv";
 import { resolveReferenceOrContinue } from "../src/resolveReferenceOrContinue.js";
+import { JSONSchema7 } from "json-schema";
 
-export const tryParseData = async (
+/** Retreives the right body from the request based on the openapi and operation */
+export const getRequestOperationBody = async (
+  openapi: OpenapiDocument,
+  operation: OpenapiOperationObject,
+  documentLocation: string,
   request: Request,
-  isJsonContentType: boolean,
 ) => {
+  if (!operation.requestBody) {
+    return { schema: undefined, data: undefined };
+  }
+
+  const requestBody = await resolveReferenceBrowser(
+    operation.requestBody,
+    openapi,
+    documentLocation,
+  );
+
+  const mediaTypes = requestBody?.content
+    ? Object.keys(requestBody.content)
+    : [];
+  const headerMediaType = request.headers.get("content-type");
+  const mediaType =
+    headerMediaType && mediaTypes.includes(headerMediaType)
+      ? headerMediaType
+      : (mediaTypes[0] as string | undefined);
+
+  if (!mediaType) {
+    return { schema: undefined, data: undefined };
+  }
+
+  const schemaOrReference = requestBody?.content?.[mediaType]?.schema as
+    | JSONSchema7
+    | ReferenceObject
+    | undefined;
+
+  const schema = await resolveReferenceBrowser(
+    schemaOrReference,
+    openapi,
+    documentLocation,
+  );
+
   try {
-    return isJsonContentType ? await request.json() : request.body;
+    // TODO: maybe there are more mediatypes that can be parsed like yaml and xml
+    const data =
+      mediaType === "application/json"
+        ? await request.json()
+        : mediaType === "plain/text"
+        ? await request.text()
+        : undefined;
+
+    return { schema: schema as JSONSchema7, data };
   } catch (e) {
-    console.log("Couldn't parse JSON:", request.url);
-    return;
+    return { schema, data: undefined };
   }
 };
+
+/** Retrieves an object of the query params belonging to an endpoint */
+export const getUrlQueryParams = (
+  url: string,
+  permittedQueryKeys: string[],
+) => {
+  try {
+    const urlQueryParams = Array.from(
+      new URL(url).searchParams.entries(),
+    ).reduce(
+      (previous, [key, value]) => ({ ...previous, [key]: value }),
+      {} as { [key: string]: string },
+    );
+
+    const queryParams = permittedQueryKeys.reduce(
+      (previous, key) =>
+        urlQueryParams[key]
+          ? { ...previous, [key]: urlQueryParams[key] }
+          : previous,
+      {} as { [key: string]: string },
+    );
+
+    return queryParams;
+  } catch (e) {
+    return {};
+  }
+};
+
 /**
  * Function that turns a regular function into an endpoint. If the function is available in the OpenAPI (with function name equalling the operationId), the input will be validated.
  *
@@ -43,13 +114,17 @@ export const resolveOpenapiAppRequest = async (
   request: Request,
   method: string,
   config: {
+    /** If given, must be a parameterName. If so, will also try to match against all paths with the prefix removed, giving the parameter to the body. Useful when you want to serve openapis that are subsets of the main server implementation
+     */
+    prefixParameterName?: string;
+
     openapi: OpenapiDocument;
     functions: {
       [functionName: string]: (jsonBody: any) => any | Promise<any>;
     };
   },
 ) => {
-  const { functions, openapi } = config;
+  const { functions, openapi, prefixParameterName } = config;
   const defaultHeaders = {
     "Access-Control-Allow-Origin": "*",
     "Access-Control-Allow-Methods": "GET, POST, PUT, DELETE, OPTIONS",
@@ -69,19 +144,32 @@ export const resolveOpenapiAppRequest = async (
   const url = request.url;
   const urlObject = new URL(url);
   const requestPathname = urlObject.pathname;
-
   // basePath may depend on openapi server
-
   const serverUrl = openapi.servers?.[0]?.url || urlObject.origin;
   const serverBasePathname = new URL(serverUrl).pathname;
-
   const restPathname = "/" + requestPathname.slice(serverBasePathname.length);
 
   const router = makeOpenapiPathRouter(openapi);
 
-  const match = router(restPathname);
+  const regularMatch = router(restPathname);
 
-  if (!match) {
+  //////// NB: Logic to also resolve if theres a prefix /////////
+  const chunks = restPathname.split("/");
+  const prefixParameterValue = prefixParameterName ? chunks[0] : undefined;
+  const pathnameWithoutPrefix = prefixParameterName
+    ? restPathname.split("/").slice(1).join("/")
+    : undefined;
+  const prefixMatch = pathnameWithoutPrefix
+    ? router(pathnameWithoutPrefix)
+    : undefined;
+  const match = (regularMatch || prefixMatch)!;
+  const prefixParamPart =
+    prefixParameterName && prefixParameterValue && prefixMatch
+      ? { [prefixParameterName]: prefixParameterValue }
+      : {};
+  /////////
+
+  if (!regularMatch && !prefixMatch) {
     const allowedMethods = [
       "get",
       "post",
@@ -145,63 +233,51 @@ export const resolveOpenapiAppRequest = async (
       )
     : undefined;
 
-  const headers = resolvedParameters
-    ? mergeObjectsArray(
-        resolvedParameters
-          .filter((item) => item?.in === "header")
-          .map((x) => {
-            const value = request.headers.get(x!.name);
-            console.log({ value });
-            if (value === null) {
-              // this could be a problem if it were required
-              return;
-            }
-            return { [x!.name]: value };
-          })
-          .filter(notEmpty),
-      )
-    : undefined;
+  const parameterHeaderKeys =
+    resolvedParameters
+      ?.filter((item) => item?.in === "header")
+      .map((x) => x!.name) || [];
 
-  // ?a=b&c=d becomes {a:b,c:d} but only if it's in the parameter spec
-  const queryParams = resolvedParameters
-    ? mergeObjectsArray(
-        new URL(request.url).search
-          .slice(1)
-          .split("&")
-          .map((x) => x.split("=") as [string, string | undefined])
-          .filter((x) =>
-            resolvedParameters?.find(
-              (item) => item?.in === "query" && item.name === x[0],
-            ),
-          )
-          .map((item) => {
-            return { [item[0]]: item[1] };
-          }),
-      )
-    : undefined;
+  const parameterQueryKeys =
+    resolvedParameters
+      ?.filter((item) => item?.in === "query")
+      .map((x) => x!.name) || [];
 
-  const schema = await tryGetOperationBodySchema(openapi, operation, "");
-  const isJsonContentType =
-    request.headers.get("content-type") === "application/json";
+  const headerKeys = parameterHeaderKeys
+    //always add Authorization as a possible header
+    .concat("Authorization")
+    .filter(onlyUnique2());
 
-  if (schema && !isJsonContentType) {
-    return new Response(
-      JSON.stringify({
-        isSuccessful: false,
-        message: "Please add 'Content-Type: application/json' header",
-      }),
-      {
-        status: 422,
-        headers: { ...defaultHeaders, "Content-Type": "application/json" },
-      },
-    );
-  }
+  const headers = mergeObjectsArray(
+    headerKeys
+      .map((key) => {
+        const value = request.headers.get(key);
+        if (value === null) {
+          // this could be a problem if it were required
+          return;
+        }
+        return { [key]: value };
+      })
+      .filter(notEmpty),
+  );
 
-  const data = await tryParseData(request, isJsonContentType);
+  const queryParams = getUrlQueryParams(request.url, parameterQueryKeys);
 
-  console.log({ url, requestPathname, match, data, headers, queryParams });
+  const { schema, data } = await getRequestOperationBody(
+    openapi,
+    operation,
+    "",
+    request,
+  );
 
-  // console.log({ data, headers });
+  console.log({
+    url,
+    data,
+    requestPathname,
+    match,
+    headers,
+    queryParams,
+  });
 
   const errors = schema
     ? tryValidateSchema({ schema: schema as JSONSchemaType<any>, data })
@@ -243,7 +319,7 @@ export const resolveOpenapiAppRequest = async (
   const pathParams =
     Object.keys(match.context).length > 0 ? match.context : undefined;
 
-  // TODO: add proper typing for this if we ever accept non-object bodies in our openapi spec
+  // TODO: Add proper typing for this if we ever accept non-object bodies in our openapi spec
   const body =
     typeof data === "object" && !Array.isArray(data) && data !== null
       ? data
@@ -251,7 +327,13 @@ export const resolveOpenapiAppRequest = async (
       ? undefined
       : { body: data };
 
-  const context = { ...body, ...pathParams, ...queryParams, ...headers };
+  const context = {
+    ...body,
+    ...pathParams,
+    ...queryParams,
+    ...headers,
+    ...prefixParamPart,
+  };
 
   // console.log({ parameters, resolvedParameters, headers, context });
 
@@ -272,13 +354,14 @@ export const resolveOpenapiAppRequest = async (
 const getHandler = (method: string) => (request: Request) => {
   return resolveOpenapiAppRequest(request, method, {
     openapi: openapi as OpenapiDocument,
+    prefixParameterName: "databaseSlug",
     functions: {
       create,
       read,
       update,
       remove,
       getOpenapi,
-      renderCrudOpenapi,
+      getCrudOpenapi,
       createDatabase,
       getSchema,
       listDatabases,
